# CV_Web

./: pyproject.toml  try later.py  🏠_Home.py
.github/workflows/: master_osd-antwortbogen.yml
pages/: 1_📖_Education.py  2_💼_Work history.py  3_🎯_Projects.py  4_✅_Certifications.py  5_👉_Skills and Languages.py
styles/: Certifications.css  Education.css  Home.css  Projects.css  Skills.css  Work.css
