[tool.poetry]
name = "cv-web"
version = "0.1.0"
description = ""
authors = ["NabilJaiMansouri <nabiljaimansouri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
watchdog = "^3.0.0"
wordcloud = "^1.9.3"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
